 change in xxxxx
	. Fix various automake stuff to allow Multi-Architecture Builds (still some work to do)
	. Romrc.d officially replace the big romrc file. Every game have a unique file (ie: mslug.rc)
	  that go to $(prefix)/share/gngeo/romrc.d by default. The path is configurable via the romrcdir
	  option
	. Add biospath option. This option tel where the bios is. Now you can have your roms and your bios
	  in different place
	. GP2X: Fix TVout with Selector (still some work to do)
	. Fix a bug with error handling when a bios file isn't present.
	. GP2X: Change key combination to quit to L & R & VOL_UP & VOL_DOWN

 change in 0.6.12
	. Add an option to under/overclock the z80: --z80clock=-20 will 
	  underclock it by 20%
	. Rename the overclock option to 68kclock
	. Add GP2X optimisation for zoomed sprites.
	. GP2X: Optimised ClearScreen.
	. Update dumpgfx for crypted roms support [Anonymous]
	. Correctly draw char in crypted roms [Anonymous]
	. Fix crashing when the romset isn't supported.
	. GP2X: Hotkeys support bound to L and R (default configuration L=A+B R=C+D)
	. Command line now override any configuration made in gngeorc/<game>.cf
	. Add a --bench option. It will run gngeo for 5000 frames, the quit and show the 
	  average fps. Thanks to Artemio for the idea.

 change in 0.6.11
	. Add Drz80 support for arm processor
	. Fix memory leek in generator68k [Donald Liew]
	. Fix blitter/effect list help messages [littletux]

 change in 0.6.10
	. GP2X: Fix miexchng slowdown
	. Memcard support (only one available, saved in ~/.gngeo/memcard )
	. Unibios settings are now saved
	. GP2X: Now, gngeo will create a gfx dump automaticaly if the selected rom is too
	large to fit in memory. See README.GP2X for details.
	. GP2X: Add overclocking control. ie. --cpu_speed 266
	. GP2X: Suppress --no-selector option. I replace it with --frontend=<command> where command is
	  the frontend that gngeo have to relaunch when it exit. By defaut --frontend=gngeo2x.gpe so that